--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+.DS_Store
+*.DS_Store
+
 # C extensions
 *.so
 
@@ -129,5 +132,3 @@ dmypy.json
 .pyre/
 
 *.vscode
-
-*.DS_Store
